--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/icons8-pied-piper-64.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/icons8-pied-piper-64.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PropertyPortal</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/daisyui@4.10.1/dist/full.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div id="root"></div>
