complete profile information updating

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="/src/assets/icons8-pied-piper-64.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PropertyPortal</title>
+    <title>Pp</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.10.1/dist/full.min.css"
       rel="stylesheet"
