created extra route for showing user profile info and fix some issues

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link
@@ -8,7 +8,7 @@
       href="/src/assets/icons8-pied-piper-64.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pp</title>
+    <title>PropertyPortal</title>
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.10.1/dist/full.min.css"
       rel="stylesheet"
